--- a/packages/esm-patient-registration-app/src/patient-registration/patient-registration.scss
+++ b/packages/esm-patient-registration-app/src/patient-registration/patient-registration.scss
@@ -57,6 +57,10 @@
   top: layout.$spacing-10;
 }
 
+.notificationSpacing {
+  margin-top: 1.5rem;
+}
+
 .touchTarget a:active {
   color: $color-gray-100;
 }
